# duckdb

./: CMakeLists.txt
examples/process-agg/: CMakeLists.txt  Makefile  run.sh
examples/process-agg/scripts/: data-gen.py  plot-groups.R  plot-read.R  plot-select.R  plot-time.R
examples/process-agg/src/: benchmark_pa.cpp  main.cpp  query_builder.cpp
examples/process-agg/src/include/: benchmark_pa.hpp  query_builder.hpp
src/: CMakeLists.txt
src/common/: types.cpp
src/common/enums/: physical_operator_type.cpp
src/common/types/: CMakeLists.txt  data_chunk.cpp  hash.cpp  null_value.cpp  sha.cpp  string_heap.cpp  value.cpp  vector.cpp
src/common/vector_operations/: comparison_operators.cpp  copy.cpp  gather.cpp  hash.cpp  scatter.cpp  set.cpp
src/execution/: aggregate_hashtable.cpp  expression_executor.cpp
src/execution/expression_executor/: CMakeLists.txt  execute_qualifying.cpp
src/execution/index/art/: art.cpp
src/execution/operator/filter/: CMakeLists.txt  (+1 more)
src/execution/physical_plan/: plan_aggregate.cpp  plan_filter.cpp
src/function/aggregate/: distributive_functions.cpp
src/include/common/: thread_pool.hpp
src/include/main/: database.hpp
src/main/: client_context.cpp  database.cpp
src/parser/expression/: CMakeLists.txt  qualifying_expression.cpp
src/planner/: expression_binder.cpp  expression_iterator.cpp  logical_operator_visitor.cpp
src/planner/expression/: CMakeLists.txt  bound_qualifying_expression.cpp
test/common/: CMakeLists.txt  test_threadpool.cpp
test/sql/aggregate/: test_aggregate.cpp
test/sql/index/: test_art_index.cpp
(+32 files in other folders)
